[project]
name = "v2e"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argcomplete>=3.6.2",
    "dv-processing>=2.0.2",
    "easygui>=0.98.3",
    "engineering-notation>=0.10.0",
    "h5py>=3.14.0",
    "numba>=0.61.2",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "screeninfo>=0.8.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
